--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
     param.footer = "https://neighborhood.org/localsite/footer.html"
 </script>
 
-
-<script type="text/javascript" src="js/audio.js"></script>
-
 <style>
 /*
 .headerbar {
@@ -43,6 +40,13 @@
 }
 */
 
+#audioscape-output-control > div {
+    
+}
+#audioscape-output-control > div:nth-child(2) {
+    margin-top:-2px;
+    margin-left:10px
+}
 .material-icons {
     cursor: pointer;
 }
@@ -105,17 +109,8 @@
 
     <div style="font-family: calibri, helvetica, arial, sans-serif; font-size: 28.5px !important; float: left;">
 
-        <div style="float:left; margin-top:4px; margin-right:10px;">
-            <select id="voiceSelect" style="font-size:22px"></select>
-        </div>
-        <div style="float:left;margin-right:10px">
-            <i class="skipPrevious material-icons" style="display:none;">skip_previous</i>
-            <i class="listenButton material-icons" style="font-size:36px">play_circle_outline</i>
-            <i class="pauseButton material-icons" style="font-size:36px; display:none;">pause_circle_outline</i>
-            <!--
-            <i class="skipNext material-icons">skip_next</i>
-            -->
-        </div>
+        <script type="text/javascript" src="js/audio.js"></script>
+        <div id="audioscape-output-control"></div>
         
     </div>
 
@@ -125,12 +120,14 @@
     </h3><br>
 <!-- /CONTROLS -->
 
-<div class="tts">
+<div class="audioscape">
+<p>
     The Neutrino Detection Project, led by Dr. Peter Gorham, a physicist from the University of Hawaii, was the first scientific group to detect the highest energy neutrinos in the universe. He excitedly gushes (though still struggles finding the words to describe something he's only beginning to understand): "The neutrino is the most ridiculous particle you can imagine. They exist, but we can't get our hands on them, because they seem to just exist in another place. And, as a physicist, even though I understand it mathematically, and I understand it intellectually, it still hits me in the gut that there is something here, surrounding me, almost like some kind of spirit or God, that I can't touch, but I can measure it. I can make a measurement. It's like measuring the spirit world, or something like that..."
     <a href="https://island.studio/">more</a>
     <br><br>
 
     From Encounters at the End of the World
+</p>
 </div>
 
 <br><br><br>
