--- a/application/index.html
+++ b/application/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="../js/common/common.js"></script>
   <link rel="stylesheet" type="text/css" href="../css/all.css">
 
-  <title>Island Studio - Day One</title>
+  <title>Audioscape - Day One</title>
   <meta name="robots" content="noindex,nofollow" />
 
 </head>
@@ -18,7 +18,7 @@
 <div class="content">
 
 
-<a href="../" class="returnhome">Island Studio</a>
+<a href="../" class="returnhome">Audioscape</a>
 
 <h1>Day One</h1>
 
@@ -28,7 +28,7 @@
 </p>
 
 <p>
-	Joining the Island Studio program had started with an application.  
+	Joining the Audioscape program had started with an application.  
 
 	Each had selected one of the following topics, which they shared with each other now over the big screen in their rooms.
 </p>
@@ -75,7 +75,7 @@ Wilem talked about growing up in North Carolina near the coast, Audry related ex
 
 
 <ul class="footer">
-  <li><a href="../">&copy; 2020 Island Studio</a></li>
+  <li><a href="../">&copy; 2021 Audioscape</a></li>
 </ul>
 
 </div>
