--- a/blender/index.html
+++ b/blender/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>  
 <link rel="stylesheet" type="text/css" href="../css/all.css">
-<title>Island Studio - Blender Workshop</title>
+<title>Audioscape - Blender Workshop</title>
 </head>
 <body>
 <img class="fixedBkgd" src="../img/universe/milkyway-atlantic.jpg" alt="" />
@@ -11,7 +11,7 @@
 <div class="content">
 
 
-<a href="../" class="returnhome">Island Studio</a>
+<a href="../" class="returnhome">Audioscape</a>
 <h1>Blender Workshop</h1>
 <p>
 	<a href="https://www.youtube.com/watch?v=whPWKecazgM">Ian Hubert - World Builder</a>
@@ -44,7 +44,7 @@ Georgia.org Sites<br>
 </p>
 
 <ul class="footer">
-  <li><a href="/">&copy; 2020 Island Studio</a></li>
+  <li><a href="/">&copy; 2021 Audioscape</a></li>
 </ul>
 
 </div>
