--- a/cat-star/index.html
+++ b/cat-star/index.html
@@ -25,7 +25,7 @@
 <div class="container">
 <div class="content">
 
-<a href="../" class="returnhome">Island Studio</a>
+<a href="../" class="returnhome">Audioscape</a>
 
 <h1>Winter on an Island</h1>
 
@@ -166,7 +166,7 @@ We are lost among the windings.</p>
 
 
 <p>
-Please return for more <a href="../">Island Studio</a> stories. 
+Please return for more <a href="../">Audioscape</a> stories. 
 And start thinking about your own <a href="../application/">application</a>.<br>
 </p>
 
@@ -195,9 +195,7 @@ And start thinking about your own <a href="../application/">application</a>.<br>
 <!--
 	https://patents.google.com/?inventor=Salvatore+Pais&oq=inventor:(Salvatore+Pais)
 -->
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
