--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -458,7 +458,7 @@ Within a year, the cooling technology we were developing took a profitable turn 
 </div><!-- /audioscape -->
 
 <ul class="footer">
-    <li><a href="./">&copy; 2020 Island Studio</a></li>
+    <li><a href="./">&copy; 2021 Audioscape</a></li>
 </ul>
 
 </div>
