--- a/gathering-cats/index.html
+++ b/gathering-cats/index.html
@@ -85,19 +85,18 @@
 
     <div class="fade-in text-flowX" style="position:fixed; left:0px; right:0px; 
     text-align:center; margin-top:60px; color:#fff; font-size:24px">
-        unwinding wonder valley
+        winding home, wonder valley
 
-        <!-- Fix overlap
+        
         <div id="play-button" style="font-size: 48px; margin-top:50px; margin-left:2px">
         <a href="#location">▶️</a>
         </div>
-    	-->
     </div>
 </div>
 <!-- /centered text -->
 
 
-<a href="#go"><img class="fixedBkgdX backgroundAbsoluteX" src="../../spring/finibus-tour/img/finibus-road-crop.jpg" style="width:100%; z-index:0" alt="" /></a>
+<a href="#go"><img class="fixedBkgdX backgroundAbsoluteX" src="img/finibus-road-crop.jpg" style="width:100%; z-index:0" alt="" /></a>
 
 
 
@@ -158,7 +157,7 @@
 <p>Before long I'm yawning, I'm already drifting. But that's why I came here, for the dreams that soon follow.</p>
 
 
-<p>Continue: <a href="../../the-artisan/">The Artisan</a></p>
+<p>Continue: <a href="/audioscape/the-artisan/">The Artisan</a></p>
 
 <p><hr /><br /></p>
 
@@ -167,7 +166,7 @@
 
 <p>I arrive at work the next day around noon, grab my old black sneakers from the cubby and start cleaning up from the night before. A drawing falls out of a paper bag holding a manuscript that my friend Jen gave me two days prior. The black lines form a skull pattern on a tan piece of paper. I slide it into my back pocket, I'm moving quickly to get to work.</p>
 
-<p>Another busy night.  The last customer was gone. Nipsy sat on the counter, her paw moving back and forth as she tried to unsnarl the ball of yarn caught on her claw. The tips are good, so I don't mind, at least until the winter is over back home.  Then I need to get myself organized, turn over a new leaf.</p>
+<p>Another busy night.  The tips are good, so I don't mind, at least until the winter is over back home.  Then I need to get myself organized, turn over a new leaf.</p>
 
 <!--
 <p>
@@ -184,7 +183,20 @@
 
 </div>
 
+<p>
+<a href="/audioscape/" parent="moog">Moog: IceCube</a>
+</p>
 
+<div class="main wrapleft local" style="display:none">
+	<hr><br>
+
+	<p>Continue:
+
+	<a href="/audioscape/lucendia/lucendia-dreams/">Lucendia Dreams</a> - 
+
+    <a href="/audioscape/winter/fueled-by-combustion">Fueled by Combustion</a></p>
+</div>
+<br><br>
 
 </div>
 </div>
