--- a/index2.html
+++ b/index2.html
@@ -85,7 +85,7 @@ Bjarne Breethfree<br>
 
 </div>
 <ul class="footer">
-  <li>&copy; 2020 Island Studio</li>
+  <li>&copy; 2021 Audioscape</li>
 </ul>
 </div>
 
