--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html><head>
-  <title>Island Studio</title>
+  <title>Audioscape</title>
   
   <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -76,7 +76,7 @@
   <li><br><b>Lucendia</b></li>
   <li class="local nomargin" style="display:none;"><a href="/audioscape/winter/challenge/">Backstory - The Challenge</a></li>
   
-  <li><a href="#studio">Island Studio</a></li>
+  <li><a href="#studio">Audioscape</a></li>
   <li><a href="/audioscape/sun/earliest-dream/">Reflecting Sun</a></li>
   <li><a href="/audioscape/summer/03-The-Inner-Inlet">The Inner Inlet</a></li>
   <li><a href="/audioscape/summer/the-throwing-stone">The Throwing Stone</a></li>
@@ -178,7 +178,7 @@
 -->
 
 
-<h2>Island Studio</h2>
+<h2>Audioscape</h2>
 
 <p>When you first arrive, the air feels hot, but you adjust.</p>
 
@@ -202,7 +202,7 @@ taking on a scale that none of us could have imagined independently.</p>
 <p>Continue: <a href="sun/earliest-dream/">Reflecting Sun</a></p>
 
   <div style="font-size:10px; clear:both">
-  <a href="/audioscape/">&copy; 2020 Island Studio</a>
+  <a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
   </div>
 
 </div>
