--- a/lucendia/codas-tribe/index.html
+++ b/lucendia/codas-tribe/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 <div class="content">
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 <h1>Cave on the Edge</h1>
 
 <p>I collect memories. Not just your everyday memories. Gravitational memories.</p>
@@ -153,7 +153,7 @@ with key characters and the structural elements of fables.</P>
 <p><a href="../../summer/">The Outer Banks</a></p>
 
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 
 </div>
