--- a/lucendia/lucendia-dreams/index.html
+++ b/lucendia/lucendia-dreams/index.html
@@ -16,7 +16,7 @@ font-family:lucida grande, tahoma, verdana, arial, sans-serif">
 <div class="content">
 
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 <h1>Lucendia Dreams</h1>
 
 <p>I was glad for Lucendia, she needed her sleep, desperately. But I felt more alone than I had in a long time. So far away now, and getting further by the moment.</p>
