--- a/scale.html
+++ b/scale.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
-    <title>Island Studio</title>
+    <title>Audioscape</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -66,20 +66,20 @@ Endclave is a choose-your-own-path game/movie/novel title, with the tag line: "T
 The title combines Endgame, with Enclave, with cave, with the notion of cutting off yourself from your previous self at the end of each journey. In other words, you don't have to let your previous experiences define your current experience. In the end you can completely transform if you successfully "clave" from your prior path - but you'd always want some form of a touchstone to connect your selves.
 
 -->
-<h1 style="font-weight:100; font-size:42px">Island Studio</h1>
+<h1 style="font-weight:100; font-size:42px">Audioscape</h1>
 
 <br>
 
 <div>
 	<p>
-	Island Studio combines open source AI, beautifully crafted interactive environments and 
+	Audioscape combines open source AI, beautifully crafted interactive environments and 
 	experienced mentors. Best of all, our destinations are always amazing!
 	</p>
 
 	
 
 	<p>
-	"<i>What I like most about the Island Studio framework is the ease with which you can change the size and scale of your modeling environment. One second you are at the scale of an elementary particle.  Then wam, molecular physics experiences pop up around you that you can enter. 
+	"<i>What I like most about the Audioscape framework is the ease with which you can change the size and scale of your modeling environment. One second you are at the scale of an elementary particle.  Then wam, molecular physics experiences pop up around you that you can enter. 
 		 
 	The next second and you are exploring cellular biology, 
 	creating the base components of tools and building materials. 
@@ -202,7 +202,7 @@ The title combines Endgame, with Enclave, with cave, with the notion of cutting 
 	</div>
 
 	<ul class="footer">
-		<li>&copy; 2020 Island Studio</li>
+		<li>&copy; 2021 Audioscape</li>
 	</ul>
 
 </div>
