--- a/spring/floating-island/index.html
+++ b/spring/floating-island/index.html
@@ -67,7 +67,7 @@ href="http://www.floatingislandinternational.com/about-us/licensing-opportunitie
 
 </div>
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 </div>
 </body>
