--- a/spring/house.html
+++ b/spring/house.html
@@ -20,9 +20,7 @@
 
 <p><br>
 </p>
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
