--- a/summer/codas-tribe/index.html
+++ b/summer/codas-tribe/index.html
@@ -32,7 +32,7 @@
   </p>
 <p>&quot;The old­-time religion,&quot; Jan said.</p>
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 
 </div>
