--- a/summer/index.html
+++ b/summer/index.html
@@ -11,7 +11,7 @@
 <div class="content">
 
 
-<a href="../" class="returnhome">Island Studio</a>
+<a href="../" class="returnhome">Audioscape</a>
 <h1>The Outer Banks</h1>
 <p>Our family traveled to Kitty Hawk in 1973, walking up the side of Kill Devil Hill.  The grass was lush and green.  As a four-year-old, my mind was alight with images of flight and invention.</p>
 
@@ -34,7 +34,7 @@ Flapping and jumping. It wasn't something the locals were accustomed to seeing g
 </p>
 
 <ul class="footer">
-  <li><a href="..//audioscape/">&copy; 2020 Island Studio</a></li>
+  <li><a href="..//audioscape/">&copy; 2021 Audioscape</a></li>
 </ul>
 
 </div>
