--- a/summer/semantic-space/index.html
+++ b/summer/semantic-space/index.html
@@ -25,7 +25,7 @@
 <div class="container">
 <div class="content">
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 
 <h1>Semantic Space</h1>
 
@@ -111,9 +111,7 @@ Is no longer alone among the dragonflies<br>
 <a href="../../lucendia/Codas-Tribe/">Cave on the Edge - Coda's Tribe</a>
 	
 
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
