--- a/summer/the-throwing-stone/index.html
+++ b/summer/the-throwing-stone/index.html
@@ -22,7 +22,7 @@
 
   <script>
       param.titleArray = ["island","studio"]
-      param.startTitle = "Island Studio"
+      param.startTitle = "Audioscape"
       param.headerLogoX = "<img src='img/logo/[].png' style='width:28px'>";
       param.headerFileX = "../../header.html"
       param.footer = "../../footer.html"
@@ -65,7 +65,7 @@
 <article></article>
 -->
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 
 <h1>The Throwing Stone</h1>
 
@@ -272,7 +272,7 @@ Dark Matter is one dimensional, hiding less than a hair's breadth away.
 
 
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 </div>
 </body>
