--- a/summer/who-was-wu/index.html
+++ b/summer/who-was-wu/index.html
@@ -28,7 +28,7 @@
 Breeze Seals &amp; Crofts 1972</a></p>
 -->
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 
 
 <h1>Who Was Wu?</h1>
@@ -500,9 +500,7 @@ href="http://grantpark.org/tree-projects" target="_blank">http://grantpark.org/t
 
 <p><span style='color:black'>&nbsp;</span></p>
 
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
