--- a/sun/earliest-dream/index.html
+++ b/sun/earliest-dream/index.html
@@ -23,7 +23,7 @@
 <div class="container">
 <div class="content">
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 
 <h1>Reflecting Sun</h1><br>
 
@@ -74,7 +74,7 @@
 <p><br>
 </p>
 <ul class="footer">
-  <li><a href="../../">&copy; 2020 Island Studio</a></li>
+  <li><a href="../../">&copy; 2021 Audioscape</a></li>
 </ul>
 </div>
 </div>
