--- a/sun/from-a-hill/index.html
+++ b/sun/from-a-hill/index.html
@@ -52,9 +52,7 @@
 <p>Though it is the dry season, there are several different species of asters, salvias, and lupines that are still in flower in the areas around the monarch colonies.&nbsp; This story&nbsp;sounds very fantasy-based so I'm not sure how important it is to you to be scientifically or botanically accurate.&nbsp; If so, pollen comes from the male parts of flowers, the stamens, or more specifically the anthers.&nbsp; The pistol is the female part of a flower and does not produce pollen&nbsp;-<a href="http://www.amnh.org/learn/biodiversity_counts/ident_help/Parts_Plants/parts_of_flower.htm">http://www.amnh.org/learn/biodiversity_counts/ident_help/Parts_Plants/parts_of_flower.htm</a>.&nbsp; Also, ferns and fungi would be releasing spores, not pollen.</p>
 <p><br>
 </p>
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
