--- a/sun/on-the-run/index.html
+++ b/sun/on-the-run/index.html
@@ -16,7 +16,7 @@
 <div class="container">
 <div class="content">
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 <h1>On the Run</h1>
 
 There is a place, I sometimes go,<br>
@@ -155,7 +155,7 @@ After the storm, we followed the two birds as they started a new route toward th
 Continue: <a href="../../">Look what we stumbled upon next!</a>
 
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 
 </div>
