--- a/the-inner-inlet-process/index.html
+++ b/the-inner-inlet-process/index.html
@@ -45,7 +45,7 @@ Blowing through the Jasmine in my mind.<br><br>
 
 </div>
 		<ul class="footer">
-            <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+            <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
         </ul>
 </div>
 </body>
