--- a/the-inner-inlet/index.html
+++ b/the-inner-inlet/index.html
@@ -23,7 +23,7 @@ style="min-width:450px;width:100%;max-width:2000px;" alt="" />
 <div class="container">
 <div class="content">
 
-<a href="../" class="returnhome">Island Studio</a>
+<a href="../" class="returnhome">Audioscape</a>
 
 <h1>The Inner Inlet</h1>
 
@@ -113,9 +113,7 @@ Their grandfather was especially fond of telling the the tales of their captain,
   </span>
 </p>
 
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 </body>
