--- a/winter/challenge/index.html
+++ b/winter/challenge/index.html
@@ -24,7 +24,7 @@
 <div class="content">
 
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 
 <h1>The Cast</h1>
 
@@ -210,7 +210,7 @@ I didn't catch on at first, so overwhelmed by the sheer immersion, but there at 
 	- Deanna
 -->
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 
 </div>
