--- a/winter/diamond-sky/index.html
+++ b/winter/diamond-sky/index.html
@@ -22,7 +22,7 @@
 
   <script>
       param.titleArray = ["island","studio"]
-      param.startTitle = "Island Studio"
+      param.startTitle = "Audioscape"
       param.headerLogoX = "<img src='img/logo/[].png' style='width:28px'>";
       param.headerFileX = "../../header.html"
       param.footer = "../../footer.html"
@@ -87,7 +87,7 @@
     I look at these quantum physicists and think they have to be bisexual to wrap their heads around such widely desperate concepts. I mean, how else can you come to comprehend and synthasize such two oppositly opposing perspectives at once.  Me, I'm too much of a boob-man to ever succeed at quantum physics.
     -->
 
-<div class="series"><a href="../../" class="returnhome">Island Studio</a></div>
+<div class="series"><a href="../../" class="returnhome">Audioscape</a></div>
 <h1>Aurignacian-Horizons</h1>
 
 		<p>Gone are the mammoths and mastodons, the giant short-faced bears, the saber-tooth cats.</p>
@@ -312,9 +312,7 @@ However, I think there is a missing piece in these theories- information. Living
 
 
 
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 </body>
