--- a/winter/fueled-by-combustion/index.html
+++ b/winter/fueled-by-combustion/index.html
@@ -24,7 +24,7 @@
 <div class="container">
 <div class="content">
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 
 <h1>Combustion</h1>
 
@@ -272,7 +272,7 @@ Nipple moon - only one of two songs, and it's 4:13 minutes compared to 3:52 for 
 <a href="/audioscape/summer/who-was-wu/">Who was Wu?</a>
 </p>
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 
 </div>
