--- a/spring/index.html
+++ b/spring/index.html
@@ -40,7 +40,7 @@ I'm thinking about Coda now, the Jaguar Princess.  It's almost 3am. Our dog Myla
 
 </div>
 <ul class="footer">
-    <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
+    <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
 </ul>
 </div>
 </body>
