--- a/summer/index2.html
+++ b/summer/index2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html><head>
-  <title>Island Studio</title>
+  <title>Audioscape</title>
   
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
   
@@ -83,9 +83,7 @@ Michael O'Conell, Arnie's father<br>
 
 Bjarne Breethfree<br>
 
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
