--- a/winter/the-bridge/index.html
+++ b/winter/the-bridge/index.html
@@ -17,7 +17,7 @@
 <div class="container">
 <div class="content">
 
-<a href="../../" class="returnhome">Island Studio</a>
+<a href="../../" class="returnhome">Audioscape</a>
 <h1 class="mainTitle">The Bridge</h1>
 
 <p>The wind is blowing strong tonight, spurning clouds from the northwest. And if you turn your head just right, the guide line pattering on the bridge above sounds like the mews of tiny kittens, waiting to be fed.</p>
@@ -77,9 +77,7 @@ From the ancient compasses of bygone sailers, to the flying machine prototypes o
 
 Continue: <a href="/audioscape/sun/on-the-run">On the Run</a>
 
-<ul class="footer">
-  <li><a href="/audioscape/">&copy; 2020 Island Studio</a></li>
-</ul>
+<a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
