--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html;">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tar and Steel - Finibus Tour</title>
+<title>Tar and Steel - Audioscape</title>
 <!--link rel="shortcut icon" href="../img/icons/" /-->
 <style type='text/css'>
 	.clear { border-top: solid 1px #ccc;}
