--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -141,7 +141,7 @@
 
 
 
-<p>"There can be no pleasure like the one unknown." - Aurora Steel, that's me.</p>
+<p>"There can be no pleasure like the one unknown." - Aurora (Audry) Steel, that's me.</p>
 
 <!--
 	In Xanadu did Kubla Khan a stately pleasure-dome decree.
