--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -147,7 +147,7 @@
 	In Xanadu did Kubla Khan a stately pleasure-dome decree.
 -->
 
-<p>We were worn, like ragged sandals saved way to long after the Dead were long dead.  Winding home from another crazy-busy Friday night of serving cheap beer on sticky floors, I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him, I reached around to grab a bite from the big bag of zucinni bread from with the deli next door, he'd traded two dozen thick slices and they'd through in a big jar of fig jam for tomorrow's breakfast.</p>
+<p>We were worn, like ragged sandals saved way too long after the Dead were long dead.  Winding home from another crazy-busy Friday night of serving cheap beer on sticky floors, I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him, I reached around to grab a bite from the big bag of zucinni bread from with the deli next door, he'd traded two dozen thick slices and they'd through in a big jar of fig jam for tomorrow's breakfast.</p>
 
 <p>Steve and I had been dating off and on for most of the previous five years.  He was both a mentor, an employer and a security blanket.  He'd taken over the pizzeria shortly after his father died, rescuing it from oblivion, while I rescued him from the loss of his dad. We were good for eachother, but not bound at the hip.</p>
 
