--- a/the-artisan/index.html
+++ b/the-artisan/index.html
@@ -153,12 +153,12 @@ Blowing through the jasmine in my mind
 <p>-----</p>
 
 <p>In another home faraway in North Carolina. A light haired boy, about 7, looks out a
-window. His mother is working in the kitchen as he move across the room and peers out
-the door and down the street of a college town with small shops. Down 7 stairs to streetlevel, students are walking by below, talking and eating yogurt and wearing toe socks. The song Summer Breeze is playing on the radio. The year is 1976.</p>
+window. His mother is working in the kitchen as he moves across the room and peers out
+the window which overlooks the street and small shops in Chapel Hill. Down below, students are walking, eating yogurt and wearing brigh colored toe-socks. The song Summer Breeze is playing on the radio. The year is 1976.</p>
 
-<p>The newspaper was <span class="GramE">laying</span> on the
+<p>The newspaper was <span class="GramE">laying</span> on the 
 sidewalk, so I picked it up and took it up to the house next door.
-The music drifted out from inside, I tapped on the screen door, and entered a world lost from time. The lair of a professor and physicist, with tall shelves of books and ancient navigation instruments. I walked across the floor.</p>
+The music drifted out from inside, I tapped on the screen and entered a world lost from time. The lair of professor and physicist, Homer Wilkins, filled with tall shelves of books and ancient navigation instruments. I walked across the floor.</p>
 
 <!--
 <p class="lyrics">
