--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -167,7 +167,7 @@
 
 <p>I arrive at work the next day around noon, grab my old black sneakers from the cubby and start cleaning up from the night before. A drawing falls out of a paper bag holding a manuscript that my friend Jen gave me two days prior. The black lines form a skull pattern on a tan piece of paper. I slide it into my back pocket, I'm moving quickly to get to work.</p>
 
-<p>Another busy night.  The last customer is gone. Nipsy is on the counter, her paws jerking back and forth as she tries desperately to unsnarl the ball of yarn caught on her claw. The tips are good, so I don't mind, at least until the winter is over back home.  Then I need to get myself organized, turn over a new leaf.</p>
+<p>Another busy night.  The last customer gone. Nipsy is on the counter, her paw jerking back and forth as she tries desperately to unsnarl the ball of yarn caught in her claws. The tips are good, so I don't mind, at least until the winter is over back home.  Then I need to get myself organized, turn over a new leaf.</p>
 
 <!--
 <p>
