--- a/the-artisan/index.html
+++ b/the-artisan/index.html
@@ -192,8 +192,7 @@ stack of photos bound in a tattered piece of cloth.</p>
 
 
 
-<p>Outside, her brother is dropping smooth stones into
-a well. She stands at his shoulder, listening to the sound reverberated as the ripples overlapping in the light of the moon.
+<p>Outside, her brother is dropping smooth stones into the well. She stands at his shoulder, listening to the sound reverberate as the ripples below them overlap in the light of the moon reflected by the well's glistening wall.
 
 <!--
 &#8220;Stones cast in your youth," she whispers, clutching the memorystone in her pocket, "reverberate the rest of your
