--- a/the-artisan/index.html
+++ b/the-artisan/index.html
@@ -192,7 +192,7 @@ stack of photos bound in a tattered piece of cloth.</p>
 
 
 
-<p>Outside, her brother is dropping smooth stones into the well. She stands at his shoulder, listening to the sound reverberate as the ripples below them overlap in the light of the moon reflected by the well's glistening wall.
+<p>Outside, her brother is dropping smooth stones into the well. She stands at his shoulder, listening to the sound reverberate as the ripples below them overlap and reflect the light of the moon, casting it up the glistening walls of the well toward them as rings of light and sound escaping into space.
 
 <!--
 &#8220;Stones cast in your youth," she whispers, clutching the memorystone in her pocket, "reverberate the rest of your
