--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -200,9 +200,7 @@ hopefully lead him to one the world's foremost mathematicians, Oseph Easthay. A 
 
 <p style="display:none;" class="local"><a href="../../winter/challenge/">The Cast - Winter Challenge - Michael tussles with David</a></p>
 
-<ul class="footer">
-  <li><a href="../../">&copy; 2021 Audioscape</a></li>
-</ul>
+<a href="../../">&copy; 2021 Audioscape</a><br><br>
 
 </div>
 
