--- a/sun/earliest-dream/index.html
+++ b/sun/earliest-dream/index.html
@@ -73,9 +73,7 @@
 
 <p><br>
 </p>
-<ul class="footer">
-  <li><a href="../../">&copy; 2021 Audioscape</a></li>
-</ul>
+<a href="../../">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
 
